@@ -27,11 +27,12 @@
 
 #import "WebUIDelegatePrivate.h"
 #import <WebCore/HitTestResult.h>
+#import <WebCore/NSImmediateActionGestureRecognizerSPI.h>
 #import <wtf/RetainPtr.h>
 
 @class WebView;
 
-@interface WebImmediateActionController : NSObject <NSGestureRecognizerDelegate> {
+@interface WebImmediateActionController : NSObject <NSImmediateActionGestureRecognizerDelegate> {
 @private
     WebView *_webView;
     WebImmediateActionType _type;
